# execise

./: KARI_remove_reference.hpp  Makefile  README.md  SFINAE.cpp  SFINAE_template.cpp  Singleton  Singleton.hpp  _my_memory.cpp  all_of-any_of.cpp  basic.cpp  bind.cpp  bitset.cpp  boost_format.cpp  boost_test.cpp  class.cpp  class_template.cpp  class_template_static.cpp  const.cpp  count_if.cpp  crc16.cpp  deprecated_attr.cpp  equal.cpp  exception.cpp  fibonacci.hpp  for_scope.cpp  func_object.cpp  func_object2.cpp  function.cpp  generate.cpp  google_test.cpp  has_iterator_template.cpp  idiom_BaseFromMember.cpp  ifthenelse.hpp  ifthenelse2.hpp  inheriting_constructors.cpp  initilizer_list.cpp  inline_namespace.cpp  lambda_ref_capture.cpp  lambda_ref_copy_capture.cpp  lamda.cpp  (+34 more)
_sandbox/: aa_template.cpp  const.cpp  lamda.cpp  shared_ptr.cpp  trait.cpp
algorithm/: all_of-any_of.cpp  copy_constructor.cpp  copy_if.cpp  count_if.cpp  find_if.cpp
boost/: failed_compile.txt
boost/log/: MEMO.txt  main.cpp
design_pattern/abstract_pattern/: main.cpp
design_pattern/adaptor/: main.cpp
design_pattern/builder/: builder.h  director.h  main.cpp
design_pattern/decorator/: coffee_base.h  coffee_component.h  component.h  decorator.h  main.cpp
design_pattern/factory_method/: factory.h  main.cpp  product.h
design_pattern/iterator/: Makefile  aggregate.h  iterator.h  main.cpp  object.h
design_pattern/observer/: main.cpp  observer_base.h  subject_base.h
design_pattern/prototype/: Makefile  main.cpp  prototype.h
design_pattern/singleton/: main.cpp  singleton.h
design_pattern/template_method/: abstract.h  concrete.h  main.cpp
design_pattern/visitor/: main.cpp
gengine/: CMakeLists.txt  TAGS  game.cpp  main.cpp  make_macos.dh
gengine/img/: 名称未設定.xcf
gengine/src/: CMakeLists.txt  TAGS  app.cpp  event.cpp  game.cpp  gamectr.cpp  gengine.h  init.cpp  leap_mortion.cpp  leap_motion.cpp  leap_motion.h  main.cpp  sprite.cpp  surface.cpp  timer.cpp
gengine/src/inc/: Rect.h  Sprite.h  Timer.h  Vect.h  leap_motion.h
lisp/: Memo.txt  ash.lisp  base.lisp  global_variable.lisp  variable.lisp
map/: map.cpp
mprotect/: mprotect.c  mprotect2.cpp
opencv/: Makefile  opencv_test01.cpp  opencv_test02.cpp  opencv_test03.cpp  opencv_test04.cpp
opencv/windows/: opCV_proto001.cpp  opCV_proto002.cpp
prime/: prime.cpp  prime2.cpp  prime2_cuda.cu
projecteuler/: p001.cpp  p002.cpp
python2/: pyqt_basic.py  pyqt_draw.py  pyqt_table.py  pyqt_timer.py
python3/: pyqt_basic.py  pyqt_calendar.py  socket_client.py  socket_server.py  test.py  webscraping.py
qt5/: Makefile  qt5_hello00.cpp
z88dk/msx/scr1/: Makefile  mymsx1.c
z88dk/msx/scr2/: Makefile  TAGS  mymsx1.c
z88dk/msx/scr2_2/: Makefile  mymsx1.c
z88dk/msx/scr5/: Makefile  mymsx1.c
